Expand search bar in paper page options and prevent flickering

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -375,3 +375,7 @@ body .carousel-control-prev {
   color: inherit;
   text-decoration: inherit;
 }
+
+.twitter-typeahead {
+  flex-grow: 100;
+}
